// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListSSOConfiguration /> renders correctly with empty list 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="method"
        values={Object {}}
      />
    </h3>
  </div>
  <div
    className="box-content box-content__content-form"
  >
    <h4>
      <FormattedMessage
        id="global.custom.feminine"
        values={Object {}}
      />
    </h4>
    <ForwardRef(Relay(ListCustomSSO))
      ssoConfigurations={
        Object {
          "edges": Array [],
        }
      }
    />
    <div
      className="mt-30"
    >
      <h4>
        <FormattedMessage
          id="preconfigured"
          values={Object {}}
        />
      </h4>
      <Connect(Component)
        ssoConfigurations={
          Object {
            "edges": Array [],
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`<ListSSOConfiguration /> renders correctly with items 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="method"
        values={Object {}}
      />
    </h3>
  </div>
  <div
    className="box-content box-content__content-form"
  >
    <h4>
      <FormattedMessage
        id="global.custom.feminine"
        values={Object {}}
      />
    </h4>
    <ForwardRef(Relay(ListCustomSSO))
      ssoConfigurations={
        Object {
          "edges": Array [
            Object {
              "node": Object {
                "$fragmentRefs": null,
                "accessTokenUrl": "https://localhost:8888/token",
                "authorizationUrl": "https://localhost:8888/authorization",
                "clientId": "clientId",
                "id": "oauth2ID",
                "logoutUrl": "https://localhost:8888/logout",
                "name": "Open ID Provider",
                "secret": "SecretKey",
                "userInfoUrl": "https://localhost:8888/user",
              },
            },
          ],
        }
      }
    />
    <div
      className="mt-30"
    >
      <h4>
        <FormattedMessage
          id="preconfigured"
          values={Object {}}
        />
      </h4>
      <Connect(Component)
        ssoConfigurations={
          Object {
            "edges": Array [
              Object {
                "node": Object {
                  "$fragmentRefs": null,
                  "accessTokenUrl": "https://localhost:8888/token",
                  "authorizationUrl": "https://localhost:8888/authorization",
                  "clientId": "clientId",
                  "id": "oauth2ID",
                  "logoutUrl": "https://localhost:8888/logout",
                  "name": "Open ID Provider",
                  "secret": "SecretKey",
                  "userInfoUrl": "https://localhost:8888/user",
                },
              },
            ],
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`<ListSSOConfiguration /> renders correctly with only Public SSO list when user is not a super admin 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="method"
        values={Object {}}
      />
    </h3>
  </div>
  <div
    className="box-content box-content__content-form"
  >
    <div
      className=""
    >
      <h4>
        <FormattedMessage
          id="preconfigured"
          values={Object {}}
        />
      </h4>
      <Connect(Component)
        ssoConfigurations={
          Object {
            "edges": Array [],
          }
        }
      />
    </div>
  </div>
</div>
`;
